Profile edit fixes

--- a/src/PD/UserBundle/Resources/translations/FOSUserBundle.el.yml
+++ b/src/PD/UserBundle/Resources/translations/FOSUserBundle.el.yml
@@ -63,6 +63,8 @@ registration:
   or_click: Αλλιώς πάτησε
   here: εδώ
   back: Επιστροφή
+  flash:
+    user_created: Επιτυχής δημιουργία!
   will_be_redirected: Θα ανακατευθυνθείς αυτόματα σε λίγα δευτερόλεπτα στη σελίδα του λογαριαμού σου!
   confirmed: Συγχαρητήρια %username%, ο λογαριασμός σου έχει ενεργοποιηθεί.
   email:
