Added contact form

--- a/src/PD/SiteBundle/Resources/translations/messages.el.yml
+++ b/src/PD/SiteBundle/Resources/translations/messages.el.yml
@@ -33,3 +33,17 @@ dog_edit:
     success: Το προφίλ του σκύλου ανανεώθηκε με επιτυχία!
 
 Address: Διεύθυνση
+
+Contact: Φόρμα Επικοινωνίας
+contact:
+  location:
+    label: Τοποθεσία
+    mine: Στο χώρο μου
+    their: Στο χώρο του ιδιοκτήτη
+  puppies:
+    label: Πόσα κουτάβια θέλω
+  message:
+    label: Μήνυμα
+    placeholder: πχ. θέλω να φέρνω τον σκύλο μου κάθε απόγευμα για 5 ημέρες
+  flash:
+    success: Το μήνυμα στάλθηκε στον ιδιοκτήτη. Αν ενδιαφέρεται θα σου απαντήσει μέσω email.
