When updating a profile you get a link to preview it

--- a/src/PD/SiteBundle/Resources/translations/messages.el.yml
+++ b/src/PD/SiteBundle/Resources/translations/messages.el.yml
@@ -30,7 +30,7 @@ area:
 
 dog_edit:
   flash:
-    success: Το προφίλ του σκύλου ανανεώθηκε με επιτυχία!
+    success: Το προφίλ του σκύλου ανανεώθηκε με επιτυχία! Μπορείς να το δείς <a href="%link%">εδώ</a>.
 
 dog:
   description:
